--- a/tasks/install_ldap.yml
+++ b/tasks/install_ldap.yml
@@ -5,14 +5,14 @@
 
 - name: Install the openldap and required Packages for RedHat
   yum: name={{ item }} state=installed
-  with_items: 
+  with_items:
       - "{{ openldap_server_pkgs }}"
   when: ansible_os_family == 'RedHat'
 
 
 - name: Install the openldap and required Packages for Ubuntu
   apt: name={{ item }} state=installed update_cache=yes
-  with_items: 
+  with_items:
       - "{{ openldap_server_pkgs }}"
   environment: env
   when: ansible_os_family == 'Debian'
@@ -24,25 +24,45 @@
   shell: slappasswd -h {SHA} -s {{ openldap_server_rootpw }}
   changed_when: False
   register: root_password
+  notify:
+   - restart slapd
+
+- name: Create the directory for ldap database
+  file: path=/var/lib/ldap/{{ openldap_server_domain_name }}/ state=directory owner={{ openldap_server_user }} group={{ openldap_server_user }}
+
+- name: Create the directory for ldap certificates
+  file: path={{ openldap_server_app_path }}/certs/ state=directory owner={{ openldap_server_user }} group={{ openldap_server_user }}
+
+- name: Generate the private key for certificate request
+  shell: openssl genrsa -des3 -passout pass:password -out my1.key 1024 chdir={{ openldap_server_app_path }}/certs/
+         creates={{ openldap_server_app_path }}/certs/my1.key
+
+- name: Strip the passphrase from the key
+  shell: openssl rsa -in my1.key -passin pass:password -out my.key chdir={{ openldap_server_app_path }}/certs/
+         creates={{ openldap_server_app_path }}/certs/my.key
+
+- name: Create and sign the the new certificate
+  shell: openssl req -new -x509 -subj '/C={{ openldap_server_country }}/ST={{ openldap_server_state }}/L={{ openldap_server_location }}/O={{ openldap_server_organization }}/CN={{ ansible_hostname }}/' -days 3650 -key my.key -out cert.crt -extensions v3_ca chdir={{ openldap_server_app_path }}/certs/   creates={{ openldap_server_app_path }}/certs/cert.crt
 
 - name: Copy the slapd.conf configuration file for Redhat
   template: src=slapd.conf.j2 dest={{ openldap_server_app_path }}/slapd.conf
   when: ansible_os_family == "RedHat"
-  notify: 
+  notify:
    - restart slapd
 
 - name: Copy the /etc/sysconfig/slapd configuration file for Redhat
   template: src=sysconfig.slapd.j2 dest=/etc/sysconfig/slapd
   when: ansible_os_family == "RedHat"
-  notify: 
+  notify:
    - restart slapd
 
 - name: Copy the slapd.conf configuration file
   template: src=slapd.conf_ubuntu.j2 dest={{ openldap_server_app_path }}/slapd.conf
   when: ansible_os_family == "Debian"
-  notify: 
+  notify:
    - restart slapd
 
 - name: Copy the ldap.conf configuration file
   template: src=ldap.conf.j2 dest={{ openldap_server_app_path }}/ldap.conf
-
+  notify:
+   - restart slapd
