--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,4 +1,4 @@
 ---
-- include: install_ldap.yml
-- include: configure_ldap.yml
-- include: add_users.yml
+- import_tasks: install_ldap.yml
+- import_tasks: configure_ldap.yml
+- import_tasks: add_users.yml
